apps/gramnuri-web/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gramnuri-web
  labels:
    app: gramnuri-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gramnuri-web
  template:
    metadata:
      labels:
        app: gramnuri-web
    spec:
      containers:
        - name: gramnuri-web
          image: ghcr.io/igh9410/gramnuri-web
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
          startupProbe:
            httpGet:
              path: /
              port: http
            failureThreshold: 10
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 2
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 30
      terminationGracePeriodSeconds: 30
      imagePullSecrets:
        - name: ghcr-image-pull-secrets
      nodeSelector:
        kubernetes.io/arch: amd64
        kubernetes.io/os: linux
