apps/gramnuri-web/base/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: gramnuri-web
  labels:
    app: gramnuri-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gramnuri-web
  template:
    metadata:
      labels:
        app: gramnuri-web
    spec:
      terminationGracePeriodSeconds: 120
      securityContext: # ← 여기 (pod-level)
        runAsNonRoot: true
        runAsUser: 65532
        runAsGroup: 65532
        fsGroup: 65532
      containers:
        - name: gramnuri-web
          image: ghcr.io/igh9410/gramnuri-web
          ports:
            - name: http
              containerPort: 3000
          lifecycle:
            preStop:
              sleep:
                seconds: 10
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
          startupProbe:
            httpGet:
              path: /healthcheck
              port: http
            failureThreshold: 10
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /healthcheck
              port: http
            initialDelaySeconds: 2
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: http
            periodSeconds: 30
      imagePullSecrets:
        - name: ghcr-image-pull-secrets
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                topologyKey: kubernetes.io/hostname
                labelSelector:
                  matchLabels:
                    app: gramnuri-web
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: gramnuri-web
      nodeSelector:
        kubernetes.io/arch: amd64
        kubernetes.io/os: linux
  strategy:
    canary:
      canaryService: gramnuri-web-canary
      stableService: gramnuri-web
      trafficRouting:
        plugins:
          argoproj-labs/gatewayAPI:
            httpRoute: gramnuri-web-httproute
      steps:
        - setWeight: 50
        - pause: { duration: 3m }
