apps/gramnuri-web/base/canary-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gramnuri-web-canary
spec:
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: gramnuri-web
  type: ClusterIP
