apps/gramnuri-web/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gramnuri-web
spec:
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: gramnuri-web
  type: ClusterIP
