apps/gramnuri-web/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: gramnuri-web-httproute
  namespace: dev
spec:
  parentRefs:
    - name: gateway
      namespace: kube-system
  hostnames:
    - landskipifyai.com
  rules:
    - backendRefs:
        - name: gramnuri-web
          port: 80
          weight: 100
        - name: gramnuri-web-canary
          port: 80
          weight: 0
